--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -6,10 +6,11 @@
 \usepackage{titlesec}
 \usepackage{tocloft}
 \usepackage[hang,flushmargin]{footmisc}
+\usepackage{indentfirst}                % RJN: Indent after Chapter, Section headings
 
 % Citation style
 % \usepackage{harvard}
-\usepackage[natbibapa]{apacite}         % Citation Style
+\usepackage[natbibapa]{apacite}         % RJN: Citation Style
 \usepackage{endnotes}
 
 % Figures
@@ -63,9 +64,9 @@
 
 % Diagrams
 \usepackage{pgf}
-\usepackage{tikz} % extensive form game trees
-\usetikzlibrary{calc} % calculating TikZ coordinates
-\usetikzlibrary{arrows.meta} % arrows for theory diagrams
+\usepackage{tikz}                       % extensive form game trees
+\usetikzlibrary{calc}                   % calculating TikZ coordinates
+\usetikzlibrary{arrows.meta}            % arrows for theory diagrams
 \usetikzlibrary{trees}
 
 % PDF links
