--- a/common/references.tex
+++ b/common/references.tex
@@ -1,3 +1,8 @@
+% References begin on a separate page, either immediately following the end of the chapter, or at the end of the entire document
+% Each reference page has a 1″ margin at the top
+% An appropriate heading is centered, in all capital letters at the top of the page (e.g., “REFERENCES”, “BIBLIOGRAPHY”, or “WORKS CITED”)
+% Page numbering continues consistently throughout the references section(s)
+
 \clearpage
 \phantomsection
 
@@ -11,8 +16,9 @@
 
 % \bibliographystyle{apsr}
 % \bibliography{diss}
-\bibliographystyle{apacite}
+\bibliographystyle{apacite}             % RJN: My preferred citation style
 
+% All entries are single-spaced within each entry and double-spaced between entries
 \begingroup
     \setlength{\bibsep}{10pt}
     \setstretch{1}
