--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -9,9 +9,10 @@
 \newcommand{\Abi}[2]{\noindent #1 \hspace{1.5cm} \= #2 \\}
 
 \begin{tabbing}
-% \Abi{ABD}{All But Dissertation}
+% Initialize
+\Abi{APE}{Average Partial Effect} 
+% Template, after initialization:
 % \Ab{}{}
-\Abi{APE}{Average Partial Effect}
 \Ab{ATE}{Average Treatment Effect}
 \Ab{CC}{Compliance Care - The name of our field experiment in Ch. 1}
 \Ab{CDC}{The US Center for Disease Control and Prevention}
