--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,12 +1,13 @@
+
 % 2″ margin at the top of the page; the second page, if any, returns to a 1″ top margin
 % The heading “ABSTRACT” centered in all capital letters at top of page
-% Your full name followed by the title worded exactly as it is on the title page, centered and one double-spaced line below “ABSTRACT”
-% The phrase “(Under the direction of [advisor's name])” in parentheses, centered, and one single-spaced line below the title
-% The text of your abstract must be double-spaced and no longer than 150 words for a thesis or 350 words for a dissertation
+% Your full name followed by title exactly as is on title page, centered and 1 double-spaced line below “ABSTRACT”
+% The phrase “(Under the direction of [advisor's name])” in parentheses, centered, and 1 single-spaced line below title
+% The text of your abstract must be double-spaced and no longer than 350 words for a dissertation
 % Pages are numbered in lower case Roman numerals
 
 \begin{center}
-\vspace*{2in} %
+\vspace*{52pt}                  % RJN: Had to fine tune this, ended up setting same as "acknowledgements" page
 {\normalfont\textbf{ABSTRACT}}
 \vspace{11pt}
 
