--- a/frontmatter/copyright.tex
+++ b/frontmatter/copyright.tex
@@ -1,8 +1,8 @@
-%If you wish to copyright your thesis, you must include a copyright page with the following information single-spaced and centered on the bottom half of the page:
-%© Year 
-%Full Name (exactly as it appears on the title page) 
-%ALL RIGHTS RESERVED
-%This page should immediately follow the title page, and should bear the lower case Roman numeral: ii.
+% Copyright symbol followed by year
+% Your name exactly as it appears on the title page
+% ALL RIGHTS RESERVED
+% All text centered, single-spaced, and 2″ from the bottom of the page
+% The page is numbered in lower case Roman numerals (ii)
 
 \begin{center}
 \begin{singlespace}
