--- a/frontmatter/pages.tex
+++ b/frontmatter/pages.tex
@@ -1,11 +1,12 @@
 
-% front matter pages use 2in top margin
+
+
+% Front Matter: 2in top margin
 % \newgeometry{left=1.25in,top=2in,right=1.25in,bottom=1in,nohead}
-\newgeometry{left=1.25in,top=2in,right=1in,bottom=1in,nohead}
+\newgeometry{left=1.25in,top=2in,right=1in,bottom=1in,nohead}       % RJN edit: 1" right margin
 \pagenumbering{roman}
 
 %1. Title Page
-
 \input{frontmatter/titlepage}
 
 %2. Copyright Page (optional)
@@ -15,37 +16,31 @@
 \newgeometry{left=1.25in,top=2in,right=1.25in,bottom=1in,nohead}
 
 %3. Abstract
-
 % Normal pages from here on out; TOC title takes care of 2in requirement.
-\restoregeometry
+% RJN: I think this "\restoregeometry" command should come AFTER \inputing the ABSTRACT. See req for Abstract to have 2" top margin. I hard-coded this.
+\restoregeometry                                    
 
 \input{frontmatter/abstract}
 
 %4. Dedication, Acknowledgement(s) and/or Preface (all optional)
 % \input{frontmatter/dedication}
 \input{frontmatter/acknowledgement}
-
 %\input{frontmatter/preface}
-
-
-
 
 %5. Table of Contents, with page references
 \input{frontmatter/contents}
 
 
 %6. List of Tables, with titles and page references (if applicable)
-
 \input{frontmatter/tables}
 
-
 %7. List of Figures or Illustrations, with titles and page references (if applicable)
-
 \input{frontmatter/figures}
 
 %8. List of Abbreviations 
 \input{frontmatter/abbreviations}
 
-%9. List of Symbols (commented out)
+%9. List of Symbols (if needed)
 
+% Transition from Roman numbering (i, ii, iii, etc.) back to Arabic numbering (1, 2, 3, ...)
 \pagenumbering{arabic}
