--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -1,24 +1,23 @@
 \begin{titlepage}
 \begin{center}
 
-% 1. Title in all capital letters and centered
+% 2″ margin at the top of the page (see "pages.tex" layout)
 
+% 1. Title in ALL CAPITAL letters and centered
 \vspace{2in}
 \begin{singlespace}
 \bf
-% The Human Factor: The Behavioral Drivers and Operational Impact of Discretion
 THE HUMAN FACTOR: THE BEHAVIORAL DRIVERS AND OPERATIONAL IMPACT OF DISCRETION
 \end{singlespace}
 
 
 % 2. Your full name centered 1″ below the title
-\vspace{1in} % 1 in = 72pt, 11pt for the line with text
+\vspace{1in}                                        % 1 in = 72pt, 11pt for the line with text
 \large Robert Jay Niewoehner III
 \end{center}
 
 
-%3. Statement correctly specifying the department/program and school granting your degree, centered 1″below your name
-
+% 3. Statement correctly specifying the department/program and school granting your degree, centered 1″below your name
 \vspace{1in}
 \begin{singlespace}
 \noindent \large
@@ -28,7 +27,8 @@ Kenan-Flagler Business School (Operations).
 \end{singlespace}
 
 
-%4. Chapel Hill centered 1″ below the statement
+% 4. Chapel Hill centered 1″ below the statement
+%    The year your thesis or dissertation is committee-approved (20xx) one line below
 \vspace{1in}
 \begin{center}
 \begin{singlespace} \large
@@ -37,13 +37,11 @@ Chapel Hill\\
 \end{singlespace}
 \end{center}
 
-%5. The phrase Approved by: 1″ below the year; under that include your committee members' names (without signatures or identifiers), all double-spaced, 2/3 across the page, and left-aligned under the Approved by: phrase
-
+% 5. The phrase Approved by: 1″ below the year; under that include your committee members' names (without signatures or identifiers), all double-spaced, 2/3 across the page, and left-aligned under the Approved by: phrase
 \vfill
 \begin{flushright}
 \begin{minipage}[t]{130pt} \large
 Approved by:\\
-%To be approved by: \\
 Bradley Staats \\
 Vinayak Deshpande \\
 Chloe Glaeser \\
