--- a/common/layout.tex
+++ b/common/layout.tex
@@ -1,6 +1,6 @@
 % Use proper margins.
-\geometry{letterpaper,left=1.25in,top=1in,right=1.25in,bottom=1in,nohead}
-
+% \geometry{letterpaper,left=1.25in,top=1in,right=1.25in,bottom=1in,nohead} % ORIGINAL
+\geometry{letterpaper,left=1in,top=1in,right=1in,bottom=1in,nohead}         % RJN EDIT
 
 
 % double-space text
@@ -9,7 +9,7 @@
 % Center chapter titles
 % Place chapter title, number, and name on same line
 % Make chapter headings all uppercase, standard font size
-% Omit page numbers (RJN: I don't think I want this, commented out)
+% Omit page numbers (RJN: I don't think I want to omit these page numbers, commented out)
 % \titleformat{\chapter}[hang]{\normalfont\fillast\bfseries}{\MakeUppercase{\chaptertitlename} \thechapter: }{0em}{\MakeUppercase}[\thispagestyle{empty}] % ORIGINAL
 \titleformat{\chapter}[hang]{\normalfont\fillast\bfseries}{\MakeUppercase{\chaptertitlename} \thechapter: }{0em}{\MakeUppercase} % RJN edit
 
