--- a/common/macros.tex
+++ b/common/macros.tex
@@ -5,7 +5,7 @@
       \hskip2em\hbox{}\nobreak\hfil\textbf{#1}%
       \parfillskip=0pt \finalhyphendemerits=0 \par}}
 
-% Indented hypothesis environment, subhypotheses
+%% Indented hypothesis environment, subhypotheses
 \theoremindent1\parindent
 \newtheorem{hyp}{Hypothesis}
 \newtheorem{prop}{Proposition}
@@ -27,5 +27,5 @@
 } 
 \makeatother
 
-% Use for commenting
+%% Use for commenting
 \newcommand{\yncomment}[1]{{\textcolor{blue}{\textsc{\textbf{[#1 --YN]}}}}}
