Updates from Overleaf

--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -12,7 +12,8 @@ THE HUMAN FACTOR: THE BEHAVIORAL DRIVERS AND OPERATIONAL IMPACT OF DISCRETION
 
 
 % 2. Your full name centered 1″ below the title
-\vspace{1in}                                        % 1 in = 72pt, 11pt for the line with text
+% 1 in = 72pt, 11pt for the line with text
+\vspace{1in}                                        
 \large Robert Jay Niewoehner III
 \end{center}
 
